--- a/hks/pom.xml
+++ b/hks/pom.xml
@@ -63,7 +63,11 @@
             <artifactId>spring-web</artifactId>
             <version>${org.springframework-version}</version>
         </dependency>
-         
+         <dependency>
+    <groupId>org.lazyluke</groupId>
+    <artifactId>log4jdbc-remix</artifactId>
+    <version>0.2.7</version>
+	</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
@@ -144,9 +148,9 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.31</version>
+            <version>5.1.36</version>
         </dependency>
-         
+          
         <!-- Oracle -->
         <dependency>
 		<groupId>com.oracle</groupId>
